# Forge

./: .gitignore  CHANGELOG.md  README.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  pyproject.toml  user_manual.md
forge/: __init__.py  __main__.py  agent.py  app.py  checkpoint.py  commands.py  config.py  context.py  context_providers.py  headless.py  interrupt.py  mcp_client.py  memory.py  policy.py  repl.py  repo_index.py  review.py  session.py  subagent.py  ui.py  usage.py  verification.py  vertex.py
reports/: architecture-analysis.md  code-quality-analysis.md  critical-findings.csv  data-flow-analysis.md  data-integrity-analysis.md  dependency-analysis.md  developer-experience-analysis.md  executive-summary.md  infrastructure-analysis.md  performance-analysis.md  recommendations.md  security-analysis.md  technical-debt-register.md  testing-analysis.md
tests/: test_agent_control_flow.py  test_agent_delegation.py  test_agent_order.py  test_agent_planning_usage_integration.py  test_agent_provider_error.py  test_checkpoint.py  test_cli_dispatch.py  test_compaction_chunking.py  test_compaction_properties.py  test_compaction_unit.py  test_config_context_table.py  test_config_defaults.py  test_config_edge_cases.py  test_config_init.py  test_config_policy.py  test_context_providers.py  test_delegate_tool.py  test_diff_preview.py  test_edit_errors.py  test_edit_modes.py  test_edit_uniqueness.py  test_execute_command.py  test_executor_policy.py  test_file_mutation_tracking.py  test_git_behavior.py  test_git_properties.py  test_headless.py  test_interrupt.py  (+66 more)
(+25 files in other folders)
